# adaptive_search_pg

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  analyze_data.py  docker-compose.yml  pyproject.toml  requirements.txt
bruno/: Simulate Clicks.bru  Test Query.bru  bruno.json
data/: benchmark_raw_data.json
data/old/: benchmark_results.json
src/: database.py  main.py  ml.py  search.py
src/api/: routes.py
src/core/: config.py
src/db/: models.py  session.py
src/scripts/: benchmark.py  ingest.py  load_data.py  perf_test.py  visualize.py
src/services/: ml_service.py  search_service.py
src/tests/: test_api.py
