[project]
name = "adaptive-search-pg"
version = "1.0.0"
description = "Adaptive Semantic Search with PostgreSQL and Feedback Loop"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg[binary]",
    "pgvector",
    "sentence-transformers",
    "python-multipart",
    "torch",
    "datasets",
    "pandas",
    "tqdm",
    "plotly",
    "huggingface_hub",
    "passlib[bcrypt]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
